Changed metadata description

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-  <meta name="description" content="Page description. No longer than 155 characters.">
+  <meta name="description" content="Short profile with links you can use to follow me">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <title>My Profile</title>
